@startuml
!include ./puml.style
class Main {
    + {static} main(args: String[])
    + {static} configure(args: String[]): Configuration
}

class Configuration <<immutable>> {
    + p1Strength: Integer
    + p2Strengh: Integer
    + scoreSystem: String
}

Configuration <--+ Main


class Match {
    + {static} P1_NAME = "p1"
    + {static} P2_NAME = "p2"
    --
    + this(strengthP1: Integer, strengthP2: Integer)
    --
    + play(): String
}

Main ..> Match

@enduml